# ot-harjoitustyo

./: .coverage  .gitignore  README.md  pyproject.toml  tasks.py  test_userstickers.db
data/: stickers.db  userstickers.db
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti2_test.py  maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/src/: .gitignore
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.md  sekvenssikaavio.md  t4_sekvenssikaavio.md  tehtava1.md
src/: index.py
src/data/: userstickers.db
src/data/images/: credit.md
src/repositories/: database.py  stickers_repository.py  userstickers.db
src/services/: stickerservice.py
src/tests/: stickerservice_test.py  stickersrepository_test.py  userstickers.db
src/ui/: collection_view.py  goodbye_view.py  login_view.py  menu_view.py  settings_view.py  ui.py
